Updated java support